fix alignment when subscribe is disabled

--- a/src/stylesheets/blog.scss
+++ b/src/stylesheets/blog.scss
@@ -349,7 +349,7 @@ section.subhead {
 *********************************************************/
 
 .subscribe-footer {
-  margin: 100px 0px;
+  margin: 0 0 100px;
   text-align: center;
 
   h3 {
@@ -403,7 +403,7 @@ section.subhead {
 *********************************************************/
 
 #main {
-  margin: auto;
+  margin: 0 auto 100px;
 }
 
 #main.archive-results {
